k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-generator
  namespace: default
  labels:
    app: image-generator
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-generator
  template:
    metadata:
      labels:
        app: image-generator
        version: v1
    spec:
      serviceAccountName: library-service-account
      containers:
        - name: image-generator
          image: 324547056370.dkr.ecr.us-east-1.amazonaws.com/image-generator:3fdd5a69dccf7eff6133d40a2f05c0b67a23ced5
          ports:
            - containerPort: 8002
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 5
