k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-generator-service
  namespace: default
  labels:
    app: image-generator
spec:
  type: ClusterIP
  selector:
    app: image-generator
  ports:
    - port: 8002
      targetPort: 8002
      protocol: TCP
